--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -11,7 +11,8 @@
   overflow: hidden;
   padding: 10px 10px;
   top: 0px;
-  position: absolute;
+  position: fixed;
+  z-index: 100;
   user-select: none;
 }
 
@@ -60,7 +61,7 @@
 .header a.active:hover {
   box-shadow: 0 0 5px rgb(146, 0, 0),
   0 0 25px rgb(146, 0, 0),
-  0 0 0px rgb(146, 0, 0);
+  0 0 50px rgb(146, 0, 0);
   background-color: rgb(0, 0, 0);
   color: rgb(146, 0, 0);
 }
