--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -1,4 +1,87 @@
-.box{
+@font-face {
+  font-family: face;
+  src: url("./Road_Rage.otf");
+}
+
+.container {
+  font-family: face;
+  display: grid;
+  place-items: center;
+  margin-top: 100px;
+}
+
+.card {
+  display: flex;
+  height: 550px;
+  width: 900px;
+  background-color: #2a007e91;
+  border-radius: 10px;
+  box-shadow: -1rem 0 3rem #000;
+/*   margin-left: -50px; */
+  transition: 0.4s ease-out;
   position: relative;
-  margin-top: 80px;
+  left: 0px;
+}
+
+.card:not(:first-child) {
+    margin-left: -50px;
+}
+
+.card:hover {
+  transform: translateY(-20px);
+  transition: 0.4s ease-out;
+  box-shadow: 0 0 5px rgb(146, 0, 0),
+  0 0 25px rgb(146, 0, 0),
+  0 0 50px rgb(146, 0, 0);
+  background-color: rgb(0, 0, 0);
+}
+
+.card:hover ~ .card {
+  position: relative;
+  left: 50px;
+  transition: 0.4s ease-out;
+}
+
+.title {
+  color: rgb(146, 0, 0);
+  font-weight: 300;
+  position: absolute;
+  left: 20px;
+  top: 15px;
+}
+
+.bar {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  height: 5px;
+  width: 860px;
+}
+
+.emptybar {
+  background-color: #2e3033;
+  width: 100%;
+  height: 100%;
+}
+
+.filledbar {
+  position: absolute;
+  top: 0px;
+  z-index: 3;
+  width: 0px;
+  height: 100%;
+  background: rgb(0,154,217);
+  background: linear-gradient(90deg, rgb(146, 0, 0) 0%, #2a007e 65%, rgb(146, 0, 0) 100%);
+  transition: 0.6s ease-out;
+}
+
+.card:hover .filledbar {
+  width: 860px;
+  transition: 0.4s ease-out;
+}
+
+.img {
+  display: grid;
+  place-items: center;
+  margin: 100px;
 }
