--- a/src/pages/styles/NotFound.css
+++ b/src/pages/styles/NotFound.css
@@ -1,143 +1,206 @@
-@-moz-keyframes rocket-movement { 100% {-moz-transform: translate(1200px,-600px);} }
-@-webkit-keyframes rocket-movement {100% {-webkit-transform: translate(1200px,-600px); } }
-@keyframes rocket-movement { 100% {transform: translate(1200px,-600px);} }
-@-moz-keyframes spin-earth { 100% { -moz-transform: rotate(-360deg); transition: transform 20s;  } }
-@-webkit-keyframes spin-earth { 100% { -webkit-transform: rotate(-360deg); transition: transform 20s;  } }
-@keyframes spin-earth{ 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); transition: transform 20s; } }
-@media (prefers-color-scheme: dark) {
+@-moz-keyframes rocket-movement {
+    100% {
+        -moz-transform: translate(1200px, -600px);
+    }
 }
 
+@-webkit-keyframes rocket-movement {
+    100% {
+        -webkit-transform: translate(1200px, -600px);
+    }
+}
+
+@keyframes rocket-movement {
+    100% {
+        transform: translate(1200px, -600px);
+    }
+}
+
+@media (prefers-color-scheme: dark) {}
+
 @font-face {
-  font-family: face;
-  src: url("./Road_Rage.otf");
+    font-family: face;
+    src: url("./Road_Rage.otf");
 }
+
 @-moz-keyframes move-astronaut {
-    100% { -moz-transform: translate(-160px, -160px);}
+    100% {
+        -moz-transform: translate(-160px, -160px);
+    }
 }
+
 @-webkit-keyframes move-astronaut {
-    100% { -webkit-transform: translate(-160px, -160px);}
+    100% {
+        -webkit-transform: translate(-160px, -160px);
+    }
 }
-@keyframes move-astronaut{
-    100% { -webkit-transform: translate(-160px, -160px); transform:translate(-160px, -160px); }
+
+@keyframes move-astronaut {
+    100% {
+        -webkit-transform: translate(-160px, -160px);
+        transform: translate(-160px, -160px);
+    }
 }
+
 @-moz-keyframes rotate-astronaut {
-    100% { -moz-transform: rotate(-720deg);}
+    100% {
+        -moz-transform: rotate(-720deg);
+    }
 }
+
 @-webkit-keyframes rotate-astronaut {
-    100% { -webkit-transform: rotate(-720deg);}
+    100% {
+        -webkit-transform: rotate(-720deg);
+    }
 }
-@keyframes rotate-astronaut{
-    100% { -webkit-transform: rotate(-720deg); transform:rotate(-720deg); }
+
+@keyframes rotate-astronaut {
+    100% {
+        -webkit-transform: rotate(-720deg);
+        transform: rotate(-720deg);
+    }
 }
 
 @-moz-keyframes glow-star {
-    40% { -moz-opacity: 0.3;}
-    90%,100% { -moz-opacity: 1; -moz-transform: scale(1.2);}
-}
-@-webkit-keyframes glow-star {
-    40% { -webkit-opacity: 0.3;}
-    90%,100% { -webkit-opacity: 1; -webkit-transform: scale(1.2);}
-}
-@keyframes glow-star{
-    40% { -webkit-opacity: 0.3; opacity: 0.3;  }
-    90%,100% { -webkit-opacity: 1; opacity: 1; -webkit-transform: scale(1.2); transform: scale(1.2); border-radius: 999999px;}
+    40% {
+        -moz-opacity: 0.3;
+    }
+
+    90%,
+    100% {
+        -moz-opacity: 1;
+        -moz-transform: scale(1.2);
+    }
 }
 
-html, body{
+@-webkit-keyframes glow-star {
+    40% {
+        -webkit-opacity: 0.3;
+    }
+
+    90%,
+    100% {
+        -webkit-opacity: 1;
+        -webkit-transform: scale(1.2);
+    }
+}
+
+@keyframes glow-star {
+    40% {
+        -webkit-opacity: 0.3;
+        opacity: 0.3;
+    }
+
+    90%,
+    100% {
+        -webkit-opacity: 1;
+        opacity: 1;
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+        border-radius: 999999px;
+    }
+}
+
+html,
+body {
     margin: 0;
     width: 100%;
     height: 100%;
     font-family: face;
     font-weight: 300;
-    -webkit-user-select: none; /* Safari 3.1+ */
-    -moz-user-select: none; /* Firefox 2+ */
-    -ms-user-select: none; /* IE 10+ */
-    user-select: none; /* Standard syntax */
+    -webkit-user-select: none;
+    /* Safari 3.1+ */
+    -moz-user-select: none;
+    /* Firefox 2+ */
+    -ms-user-select: none;
+    /* IE 10+ */
+    user-select: none;
+    /* Standard syntax */
     color: #fff;
 }
 
-.bg-purple{
+.header {
+    font-family: face;
+    overflow: hidden;
+    padding: 10px 10px;
+    top: 0px;
+    position: fixed;
+    z-index: 100;
+    user-select: none;
+    margin-bottom: 200px;
+  }
+
+.bg-purple {
     background-color: rgb(0, 0, 0);
     background-repeat: repeat-x;
     background-size: cover;
     background-position: left top;
     height: 100%;
     overflow: hidden;
-    
+
 }
 
-.btn-go-home{
+.central-body {
+    padding: 4% 5% 8% 5%;
+    text-align: center;
+}
+
+.central-body a.active{
     position: relative;
-    z-index: 200;
     margin: 15px auto;
     width: 100px;
     padding: 10px 15px;
-    border: 1px solid #FFCB39;
-    border-radius: 100px;
-    font-weight: 400;
+    border: 1px solid rgb(146, 0, 0);
+    border-radius: 5px;
     display: block;
     color: white;
     text-align: center;
     text-decoration: none;
-    letter-spacing : 2px;
-    font-size: 11px;
-    
-    -webkit-transition: all 0.3s ease-in;
-    -moz-transition: all 0.3s ease-in;
-    -ms-transition: all 0.3s ease-in;
-    -o-transition: all 0.3s ease-in;
-    transition: all 0.3s ease-in;
+    letter-spacing: 2px;
+    font-size: 20px;
 }
 
-.btn-go-home:hover{
-    background-color: #FFCB39;
-    color: #fff;
+.central-body a.active:hover {
+    background-color: rgb(146, 0, 0);
+    box-shadow: 0 0 5px rgb(146, 0, 0),
+        0 0 25px rgb(146, 0, 0),
+        0 0 50px rgb(146, 0, 0);
+    color: #000000;
     transform: scale(1.05);
-    box-shadow: 0px 20px 20px rgba(0,0,0,0.1);
 }
 
-.central-body{
-    padding: 8% 5% 8% 5%;
-    text-align: center;
-}
-
-.central-body h1{
-    z-index: 400;
-}
-
-.objects img{
-    z-index: 90;
-    pointer-events: none;
-}
-
-.object_rocket{
+.object_rocket {
     z-index: 95;
     position: absolute;
     transform: translateX(-50px);
     top: 75%;
     pointer-events: none;
-    animation: rocket-movement 200s linear infinite both running;
+    animation: rocket-movement 50s linear infinite both running;
 }
 
-.object_earth{
+.object_sun {
     position: absolute;
-    top: 20%;
-    left: 15%;
-    z-index: 90;
-/*    animation: spin-earth 100s infinite linear both;*/
+    top: 26%;
+    right: 15%;
+    z-index: 1;
 }
 
-.object_moon{
+.object_moon {
     position: absolute;
-    top: 12%;
-    left: 25%;
+    top: 40%;
+    left: 1%;
+    z-index: 1;
 }
 
-.object_astronaut{
+.object_astronaut {
     animation: rotate-astronaut 200s infinite linear both alternate;
 }
 
-.box_astronaut{
+.object_moon {
+    animation: rotate-astronaut 200s infinite linear both alternate;
+}
+
+.box_astronaut {
     z-index: 110 !important;
     position: absolute;
     top: 60%;
@@ -146,20 +209,20 @@ html, body{
     animation: move-astronaut 50s infinite linear both alternate;
 }
 
-.image-404{
+.image-404 {
     position: relative;
     z-index: 100;
     pointer-events: none;
 }
 
 .stars{
-    background-color: rgb(0, 0, 0);
+    background: url(http://salehriaz.com/404Page/img/overlay_stars.svg);
     background-repeat: repeat;
     background-size: contain;
     background-position: left top;
 }
 
-.glowing_stars .star{
+.glowing_stars .star {
     position: absolute;
     border-radius: 100%;
     background-color: #fff;
@@ -169,50 +232,54 @@ html, body{
     will-change: opacity;
 }
 
-.glowing_stars .star:nth-child(1){
+.glowing_stars .star:nth-child(1) {
     top: 80%;
     left: 25%;
     animation: glow-star 2s infinite ease-in-out alternate 1s;
 }
-.glowing_stars .star:nth-child(2){
+
+.glowing_stars .star:nth-child(2) {
     top: 20%;
     left: 40%;
     animation: glow-star 2s infinite ease-in-out alternate 3s;
 }
-.glowing_stars .star:nth-child(3){
+
+.glowing_stars .star:nth-child(3) {
     top: 25%;
     left: 25%;
     animation: glow-star 2s infinite ease-in-out alternate 5s;
 }
-.glowing_stars .star:nth-child(4){
+
+.glowing_stars .star:nth-child(4) {
     top: 75%;
     left: 80%;
     animation: glow-star 2s infinite ease-in-out alternate 7s;
 }
-.glowing_stars .star:nth-child(5){
+
+.glowing_stars .star:nth-child(5) {
     top: 90%;
     left: 50%;
     animation: glow-star 2s infinite ease-in-out alternate 9s;
 }
 
-@media only screen and (max-width: 600px){
-    .navbar-links{
+@media only screen and (max-width: 600px) {
+    .navbar-links {
         display: none;
     }
-    
-    .custom-navbar{
+
+    .custom-navbar {
         text-align: center;
     }
-    
-    .brand-logo img{
+
+    .brand-logo img {
         width: 120px;
     }
-    
-    .box_astronaut{
+
+    .box_astronaut {
         top: 70%;
     }
-    
-    .central-body{
+
+    .central-body {
         padding-top: 25%;
     }
 }
