--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -9,15 +9,34 @@
 .header {
   font-family: face;
   overflow: hidden;
+  width: 100%;
   padding: 10px 10px;
   top: 0px;
   position: fixed;
+  display: flex;
   z-index: 100;
   user-select: none;
+  justify-content: space-between;
   margin-bottom: 200px;
+  list-style: none;
 }
 
-.header a {
+.header ul li {
+  display: inline-block;
+}
+
+.active {
+  float: left;
+  color: rgb(146, 0, 0);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 10px;
+}
+
+.normal {
   float: left;
   color: rgb(146, 0, 0);
   text-align: center;
@@ -38,7 +57,7 @@
 }
 
 .imgLogo {
-  width: 8%;
+  height: 70px;
   float: left;
   color: rgb(146, 0, 0);
   text-align: center;
@@ -48,7 +67,7 @@
 }
 
 /* Change the background color on mouse-over */
-.header a:hover {
+.normal:hover {
   background-color: #ddd;
   color: black;
 }
@@ -67,7 +86,89 @@
   color: rgb(146, 0, 0);
 }
 
-/* Float the link section to the right */
-.header-right {
+.checkbtn {
+  font-size: 30px;
+  color: white;
   float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width: 952px){
+  .logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  .header a{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 858px){
+  .checkbtn {
+    display: block;
+  }
+
+  .header ul {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.795);
+    backdrop-filter: blur(10px);
+    top: 100px;
+    right: -115%;
+    text-align: center;
+    transition: all 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px; /* Espacio entre botones */
+  }
+
+  .header a.active {
+    background-color: rgb(0, 0, 0);
+    color: rgb(146, 0, 0);
+    border: 2px solid rgb(146, 0, 0);
+  }
+
+  .header ul li {
+    width: 80%; /* Ancho de cada botón */
+    background-color: rgba(0, 0, 0, 0.178);
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+
+  .header ul li a {
+    width: 88%;
+    height: 80%;
+    display: flex;         /* Convierte el enlace en un contenedor flexible */
+    align-items: center;   /* Centra verticalmente el texto */
+    justify-content: center; /* Centra horizontalmente el texto */
+    text-align: center; 
+    border: 2px solid rgb(146, 0, 0);
+    font-size: 30px; /* Tamaño más grande para móviles */
+    background-color: rgb(0, 0, 0);
+  }
+
+  #check:checked ~ ul {
+    right: 0;
+  }
+}
+
+@media (max-width: 480px){
+  .imgLogo {
+    height: 40px;
+  }
+  h1 {
+    font-size: 25px;
+  }
 }
