--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -17,12 +17,23 @@
   z-index: 100;
   user-select: none;
   justify-content: space-between;
-  margin-bottom: 200px;
   list-style: none;
 }
 
 .header ul li {
   display: inline-block;
+}
+
+.ultimo {
+  float: left;
+  color: rgb(146, 0, 0);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 10px;
+  margin-right: 30px;
 }
 
 .active {
@@ -68,6 +79,11 @@
 
 /* Change the background color on mouse-over */
 .normal:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.ultimo:hover {
   background-color: #ddd;
   color: black;
 }
@@ -121,7 +137,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.795);
     backdrop-filter: blur(10px);
-    top: 100px;
+    top: 75px;
     right: -115%;
     text-align: center;
     transition: all 0.5s ease;
@@ -149,13 +165,13 @@
 
   .header ul li a {
     width: 88%;
-    height: 80%;
+    height: 70%;
     display: flex;         /* Convierte el enlace en un contenedor flexible */
     align-items: center;   /* Centra verticalmente el texto */
     justify-content: center; /* Centra horizontalmente el texto */
     text-align: center; 
     border: 2px solid rgb(146, 0, 0);
-    font-size: 30px; /* Tamaño más grande para móviles */
+    font-size: 25px; /* Tamaño más grande para móviles */
     background-color: rgb(0, 0, 0);
   }
 
@@ -170,5 +186,14 @@
   }
   h1 {
     font-size: 25px;
+  }
+}
+
+@media (max-width: 418px){
+  .imgLogo {
+    height: 26px;
+  }
+  h1 {
+    font-size: 18px;
   }
 }
