--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -10,11 +10,12 @@
   font-family: face;
   overflow: hidden;
   width: 100%;
-  padding: 10px 10px;
+  height: 90px;
   top: 0px;
-  position: fixed;
+  position: relative;
   display: flex;
   z-index: 100;
+  background-color: rgba(0, 0, 0, 0.123);
   user-select: none;
   justify-content: space-between;
   list-style: none;
@@ -62,9 +63,9 @@
   float: left;
   color: rgb(146, 0, 0);
   text-align: center;
-  padding: 12px;
   text-decoration: none;
-  line-height: 25px;
+  font-size: 27px;
+  padding-left: 15px;
 }
 
 .imgLogo {
@@ -137,7 +138,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.795);
     backdrop-filter: blur(10px);
-    top: 75px;
+    top: 85px;
     right: -115%;
     text-align: center;
     transition: all 0.5s ease;
