--- a/src/components/styles/Banner.css
+++ b/src/components/styles/Banner.css
@@ -14,21 +14,57 @@
 
 .banner_area ul li a {
     text-decoration: none;
-    color: white;
-    font-size: 50px;
+    align-items: center;
+    justify-content: center;
 }
+
+.texto {
+    font-size: 50px;
+    color: white;
+}
+
+.boton {
+    color: rgb(0, 0, 0);
+    background-color: rgb(146, 0, 0);
+    text-align: center;
+    border: 1px solid;
+    border-color: black;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    margin: 10px;
+    margin-right: 30px;
+    width: 100px;
+}
+
+.boton:hover {
+    box-shadow: 0 0 5px rgb(146, 0, 0),
+    0 0 25px rgb(146, 0, 0),
+    0 0 50px rgb(146, 0, 0);
+    background-color: rgb(0, 0, 0);
+    color: rgb(146, 0, 0);
+  }
 
 .banner_area ul li {
-    padding-top: 40px;
-    display: inline-block;
-}
-
-.banner_area ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0;
+    margin-top: 20px;
     list-style: none;
 }
 
-@media (max-width: 506px){
-    .banner_area ul li a {
+.banner_area ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
+
+@media (max-width: 666px) {
+    .texto {
         font-size: 35px;
     }
 }
