--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-#particles canvas {
-    z-index: -1;
-    height: 100%;
+body,
+html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     width: 100%;
-    position: absolute;
+}
+
+* {
+    box-sizing: border-box;
 }
