--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -7,11 +7,9 @@
   font-family: "face";
   width: 100%;
   height: 90px;
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  user-select: none;
   padding: 0 20px;
   z-index: 100;
 }
@@ -43,7 +41,6 @@
   display: flex;
   gap: 15px;
   list-style: none;
-  padding-right: 30px;
 }
 
 .header-link {
@@ -92,45 +89,46 @@
   }
 
   .header-menu {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.795);
-      backdrop-filter: blur(10px);
-      top: 85px;
-      right: -120%;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 30px;
-      padding-top: 50px;
-      transition: all 0.5s ease;
-  }
+    position: fixed;
+    top: 72px;
+    right: 0;
+    width: 100%;
+    height: 90%;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+    transform: translateX(100%);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    transition: transform 0.4s ease-in-out;
+}
 
-  .header-menu li {
-      width: 80%;
-      background-color: rgba(0, 0, 0, 0.178);
-      backdrop-filter: blur(5px);
-      border-radius: 5px;
-      margin-top: 20px;
-      margin-left: 25px;
-  }
+.header-menu li {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+    margin-top: 10px;
+}
 
-  .header-menu .header-link {
-      width: 100%;
-      font-size: 25px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 2px solid rgb(146, 0, 0);
-      background-color: black;
-  }
+.header-menu .header-link {
+    width: 100%;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid rgb(146, 0, 0);
+    background-color: black;
+    padding: 15px;
+}
 
-  .header-check:checked ~ .header-menu {
-      right: 0;
-  }
+/* Activa la animación cuando se marca el checkbox */
+.header-check:checked ~ .header-menu {
+    transform: translateX(0);
+}
 }
 
 @media (max-width: 480px) {
