--- a/src/components/styles/Prices.css
+++ b/src/components/styles/Prices.css
@@ -1,63 +1,41 @@
+.prices_page {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
 .pricing {
   padding: 100px 0;
-  z-index: 50;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.pricing h1 {
-  color: aqua;
-}
-
-.cards-wrapper {
-  --gutter: 30px;
+.prices-cards-wrapper {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   max-width: 1440px;
   width: 90%;
   margin: 0 auto;
-  z-index: 70;
-}
-
-.price-card.clr-1 {
-  --clr: rgb(146, 0, 0);
-  z-index: 70;
-}
-
-.price-card.clr-2 {
-  --clr: rgb(146, 0, 0);
-  z-index: 70;
-}
-
-.price-card.clr-3 {
-  --clr: rgb(146, 0, 0);
-  z-index: 70;
+  gap: 20px;
 }
 
 .price-card {
-  --bg-clr: rgba(0, 0, 0, 0.74);
-  --text-clr: rgb(255, 255, 255);
-  border: 5px solid var(--clr);
+  border: 5px solid rgb(146, 0, 0);
   padding: 40px 20px;
-  width: 90%;
-  margin-top: 20px;
-  background-color: var(--bg-clr);
-}
-
-.price-card:not(:last-child) {
-  margin-right: var(--gutter);
-}
-
-.price-card .fa-check {
-  color: #57cc99;
-}
-
-.price-card .fa-times {
-  color: #ff0000;
+  width: 100%;
+  max-width: 350px;
+  text-align: center;
+  z-index: 98;
+  color: white;
 }
 
 .price-container {
   width: 140px;
   height: 140px;
-  background-color: var(--clr);
+  background-color: rgb(146, 0, 0);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,159 +51,87 @@
 
 .price span:first-child {
   font-size: 50px;
+  -webkit-text-stroke: 0.1px black;
 }
 
 .price span:last-child {
   font-size: 40px;
+  -webkit-text-stroke: 0.1px black;
 }
 
-.plan {
-  text-transform: capitalize;
+.prices-plan {
   font-size: 30px;
-  color: var(--text-clr);
-  text-align: center;
+  color: white;
+}
+
+.prices-deliverable {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.prices-deliverable span {
+  margin-right: 10px;
+}
+
+.prices-align-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
 }
 
-.plan span {
-  background-color: var(--bg-clr);
-  padding: 0 20px;
-  position: relative;
-  z-index: 1;
-}
-
-.plan::before {
-  content: "";
+.prices-mouse {
+  width: 50px;
+  height: auto;
   position: absolute;
-  width: 90%;
-  height: 1px;
-  background-color: var(--clr);
-  right: 0;
+  left: 10px;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.deliverable {
-  display: flex;
-  align-items: center;
-  font-size: 18px;
-  justify-content: center;
-  text-align: center;
-}
-
-.deliverable:not(:last-child) {
-  margin-bottom: 30px;
-}
-
-.deliverable span:first-child {
-  text-transform: capitalize;
-  color: var(--text-clr);
-  margin-right: 15px;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.btn {
+.prices-btn {
   display: inline-block;
-  margin-top: 45px;
   padding: 1em 3.5em;
-  border: 3px solid var(--clr);
-  text-decoration: none;
-  font-size: 18px;
+
+  border: 4px solid black;
   background-color: rgb(146, 0, 0);
-  color: rgb(0, 0, 0);
+  color: black;
+  text-decoration: none;
+  text-align: center;
 }
 
-.btn:hover {
-  box-shadow: 0 0 5px rgb(146, 0, 0),
-    0 0 25px rgb(146, 0, 0),
-    0 0 50px rgb(146, 0, 0);
-  background-color: rgb(0, 0, 0);
+.prices-btn:hover {
+  background-color: black;
   color: rgb(146, 0, 0);
 }
 
 .container_prices {
-  font-family: face;
-  display: grid;
-  margin-top: 25px;
-  justify-items: center;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
   text-align: center;
-  user-select: none;
+  background-color: rgba(56, 56, 56, 0.541);
+  padding: 25px;
+  color: white;
+  margin-top: 25px;
 }
 
 .container_prices h3 {
   color: #ff0000;
 }
 
-.item_prices {
-  border-radius: 5px;
-  width: 90%;
-  padding: 25px;
-  z-index: 70;
-  background-color: rgba(56, 56, 56, 0.541);
-  color: rgb(255, 255, 255);
-}
-
-
-@media (max-width: 1200px) {
-  .cards-wrapper {
-    flex-wrap: wrap;
-  }
-
-  .price-card {
-    width: calc(45% - var(--gutter));
-  }
-
-  .price-card:nth-child(2) {
-    margin-right: 0;
-  }
-
-  .price-card {
-    margin-top: 20px;
-  }
-  .container {
-    margin-top: 30px;
-    width: 90%;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
+/* RESPONSIVE */
 @media (max-width: 768px) {
-  .cards-wrapper {
+  .prices-cards-wrapper {
     flex-direction: column;
     align-items: center;
   }
 
   .price-card {
-    width: 90%;
+    max-width: 100%;
   }
 
-  .price-card:first-child {
-    margin-right: 0;
-  }
-
-  .price-card:last-child {
-    margin-top: 0;
-  }
-
-  .price-card:not(:last-child) {
-    margin-bottom: var(--gutter);
-  }
-}
-
-@media (max-width: 320px) {
-  .price-container {
-    width: 120px;
-    height: 120px;
-  }
-
-  .btn {
-    padding: 0.5em 2em;
+  .prices-mouse {
+    width: 40px;
   }
 }
