--- a/src/components/styles/Telegram.css
+++ b/src/components/styles/Telegram.css
@@ -1,96 +1,102 @@
+@font-face {
+  font-family: "face";
+  src: url("./Road_Rage.otf");
+}
+
 .telegram-icon-float {
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:45px;
-	left:20px;
-	background-color:rgb(146, 0, 0);
-	color:rgb(0, 0, 0);
-	border-radius:50px;
-	text-align:center;
-  font-size:40px;
-	box-shadow: 2px 2px 3px #999;
-  z-index:200;
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 45px;
+  left: 20px;
+  background-color: rgb(146, 0, 0);
+  color: rgb(0, 0, 0);
+  border-radius: 50%;
+  text-align: center;
+  font-size: 40px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 
 .telegram-icon-float:hover {
-	box-shadow: 0 0 5px rgb(255, 255, 255),
-  0 0 25px rgb(255, 255, 255),
-  0 0 100px rgb(255, 255, 255);
+  box-shadow: 0 0 5px rgb(255, 255, 255),
+    0 0 25px rgb(255, 255, 255),
+    0 0 100px rgb(255, 255, 255);
 }
 
 .my-float {
-	margin-top:10px;
+  margin-top: 0;
 }
 
 
 .tooltip-container {
-    cursor: pointer;
-    position: relative;
-    display: inline-block;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
 }
 
 .tooltip {
-    opacity: 0;
-    z-index: 99;
-    width: 100px;
-    display: block;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 5px 10px;
-    border-radius: 3px;
-    text-align: center;
-    text-shadow: 1px 1px 2px rgb(146, 0, 0);
-    background: rgb(146, 0, 0);
-    border: 1px solid rgba(34,34,34,0.9);
-    box-shadow: 0 0 3px rgba(0,0,0,0.5);
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    -o-transition: all .2s ease-in-out;
-    -ms-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -o-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-    position: absolute;
-    right: -55px;
-    bottom: 75px;
+  font-family: "face";
+  opacity: 0;
+  z-index: 99;
+  width: 100px;
+  display: block;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 3px;
+  text-align: center;
+  text-shadow: 1px 1px 2px rgb(146, 0, 0);
+  background: rgb(146, 0, 0);
+  border: 1px solid rgba(34, 34, 34, 0.9);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -o-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  position: absolute;
+  right: -55px;
+  bottom: 75px;
 }
 
-.tooltip:before,.tooltip:after {
-    content: '';
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid rgba(51,51,51,0.9);
-    position: absolute;
-    bottom: -11px;
-    left: 43%;
+.tooltip:before,
+.tooltip:after {
+  content: '';
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid rgba(51, 51, 51, 0.9);
+  position: absolute;
+  bottom: -11px;
+  left: 43%;
 }
 
-.tooltip-container:hover .tooltip,a:hover .tooltip {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
+.tooltip-container:hover .tooltip,
+a:hover .tooltip {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
 
-@media (max-width: 858px){
+@media (max-width: 858px) {
   .telegram-icon-float {
-    position:fixed;
-    width:60px;
-    height:60px;
-    bottom:45px;
-    left:20px;
-    background-color:rgb(146, 0, 0);
-    color:rgb(0, 0, 0);
-    border-radius:50px;
-    text-align:center;
-    font-size:40px;
-    box-shadow: 2px 2px 3px #999;
-    z-index:200;
+    width: 45px;
+    height: 45px;
+    font-size: 30px;
+    bottom: 30px;
+    left: 15px;
+    z-index: 98;
   }
 }
