--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
+@font-face {
+    font-family: face;
+    src: url("./Road_Rage.otf");
+}
+
 body,
 html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     width: 100%;
+    font-family: "face";
 }
 
 * {
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    user-select: none;
 }
