--- a/src/components/styles/Banner.css
+++ b/src/components/styles/Banner.css
@@ -5,7 +5,7 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 200px;
+    height: 250px;
     top: 90px;
     display: flex;
     align-items: center;
@@ -23,11 +23,31 @@
     list-style: none;
 }
 
+
+@keyframes bannerglowEffect {
+    0% {
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                   0 0 20px rgba(172, 172, 172, 0.6),
+                   0 0 30px rgba(29, 29, 29, 0.4);
+    }
+    50% {
+      text-shadow: 0 0 15px rgb(255, 255, 255),
+                   0 0 25px rgba(172, 172, 172, 0.6),
+                   0 0 35px rgba(29, 29, 29, 0.4);
+    }
+    100% {
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                   0 0 20px rgba(172, 172, 172, 0.6),
+                   0 0 30px rgba(29, 29, 29, 0.4);
+    }
+  }
+
 .banner-text {
     font-size: 50px;
     color: white;
     text-decoration: none;
     -webkit-text-stroke: 1px black;
+    animation: bannerglowEffect 1.5s infinite alternate;
 }
 
 /* Contenedor para centrar el botón */
@@ -68,6 +88,25 @@
     position: absolute;
     left: 40%;
     transform: translateX(-100%);
+}
+
+/* Líneas rojas arriba y abajo */
+.banner_area::before,
+.banner_area::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: rgb(0, 0, 0);
+}
+
+.banner_area::before {
+    top: 0; /* Línea superior */
+}
+
+.banner_area::after {
+    bottom: 0; /* Línea inferior */
 }
 
 /* Responsive */
