--- a/src/components/styles/Prices.css
+++ b/src/components/styles/Prices.css
@@ -59,6 +59,29 @@
   -webkit-text-stroke: 0.1px black;
 }
 
+@keyframes pricesglowEffect {
+  0% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                 0 0 20px rgba(172, 172, 172, 0.6),
+                 0 0 30px rgba(29, 29, 29, 0.4);
+  }
+  50% {
+    text-shadow: 0 0 15px rgb(255, 255, 255),
+                 0 0 25px rgba(172, 172, 172, 0.6),
+                 0 0 35px rgba(29, 29, 29, 0.4);
+  }
+  100% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                 0 0 20px rgba(172, 172, 172, 0.6),
+                 0 0 30px rgba(29, 29, 29, 0.4);
+  }
+}
+
+.price span:first-child,
+.price span:last-child {
+  animation: pricesglowEffect 1.5s infinite alternate;
+}
+
 .prices-plan {
   font-size: 30px;
   color: white;
@@ -87,7 +110,7 @@
   width: 50px;
   height: auto;
   position: absolute;
-  left: 10px;
+  left: 30px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -95,7 +118,6 @@
 .prices-btn {
   display: inline-block;
   padding: 1em 3.5em;
-
   border: 4px solid black;
   background-color: rgb(146, 0, 0);
   color: black;
@@ -106,6 +128,7 @@
 .prices-btn:hover {
   background-color: black;
   color: rgb(146, 0, 0);
+  border: 2px solid rgb(255, 255, 255);
 }
 
 .container_prices {
@@ -133,5 +156,6 @@
 
   .prices-mouse {
     width: 40px;
+    left: 20px;
   }
 }
