--- a/src/components/styles/Banner.css
+++ b/src/components/styles/Banner.css
@@ -26,21 +26,23 @@
 
 @keyframes bannerglowEffect {
     0% {
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-                   0 0 20px rgba(172, 172, 172, 0.6),
-                   0 0 30px rgba(29, 29, 29, 0.4);
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+            0 0 20px rgba(172, 172, 172, 0.6),
+            0 0 30px rgba(29, 29, 29, 0.4);
     }
+
     50% {
-      text-shadow: 0 0 15px rgb(255, 255, 255),
-                   0 0 25px rgba(172, 172, 172, 0.6),
-                   0 0 35px rgba(29, 29, 29, 0.4);
+        text-shadow: 0 0 15px rgb(255, 255, 255),
+            0 0 25px rgba(172, 172, 172, 0.6),
+            0 0 35px rgba(29, 29, 29, 0.4);
     }
+
     100% {
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-                   0 0 20px rgba(172, 172, 172, 0.6),
-                   0 0 30px rgba(29, 29, 29, 0.4);
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+            0 0 20px rgba(172, 172, 172, 0.6),
+            0 0 30px rgba(29, 29, 29, 0.4);
     }
-  }
+}
 
 .banner-text {
     font-size: 50px;
@@ -56,7 +58,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%; /* Hace que el contenedor ocupe todo el ancho */
+    width: 100%;
+    /* Hace que el contenedor ocupe todo el ancho */
 }
 
 /* Botón de Comprar centrado */
@@ -76,8 +79,8 @@
 /* Efecto hover */
 .banner-buy-text:hover {
     box-shadow: 0 0 5px rgb(146, 0, 0),
-                0 0 25px rgb(146, 0, 0),
-                0 0 50px rgb(146, 0, 0);
+        0 0 25px rgb(146, 0, 0),
+        0 0 50px rgb(146, 0, 0);
     background-color: black;
     color: rgb(146, 0, 0);
 }
@@ -90,7 +93,6 @@
     transform: translateX(-100%);
 }
 
-/* Líneas rojas arriba y abajo */
 .banner_area::before,
 .banner_area::after {
     content: "";
@@ -102,18 +104,21 @@
 }
 
 .banner_area::before {
-    top: 0; /* Línea superior */
+    top: 0;
 }
 
 .banner_area::after {
-    bottom: 0; /* Línea inferior */
+    bottom: 0;
 }
 
 /* Responsive */
 @media (max-width: 666px) {
     .banner-text {
         font-size: 35px;
-        -webkit-text-stroke: 1px black;
+        text-shadow: none;
+        -webkit-text-stroke: 0;
+        animation: none;
+        text-shadow: none;
     }
 
     .banner-mouse {
