--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -84,12 +84,47 @@
   right: 20px;
 }
 
+
+.fullscreen-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9998;
+}
+
+.loader {
+  width: 50px;
+    height: 50px;
+    border: 5px solid white;
+    border-top: 5px solid transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 /* Responsive */
 @media (max-width: 858px) {
   .header-checkbtn {
       display: block;
       margin-right: 10px;
   }
+
+  .header-title {
+    margin-left: 20px;
+}
 
   .header-menu {
     position: fixed;
@@ -140,6 +175,7 @@
 
   .header-title {
       font-size: 25px;
+      margin-left: 20px;
   }
 }
 
