--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,23 @@ html {
     -webkit-user-select: none;
     user-select: none;
 }
+
+#tsparticles {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
+}
