--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,18 +1,10 @@
-@font-face {
-  font-family: face;
-  src: url("./Road_Rage.otf");
-}
-
 .footer {
-  font-family: face;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  position: relative;
   width: 100%;
-  background-color: rgba(146, 0, 0, 0.185);
+  background-color: rgba(146, 0, 0, 0.37);
   color: white;
-  z-index: 100;
-  margin-top: 60px;
   text-align: center;
   user-select: none;
+  padding: 20px 0;
+  margin-top: 25px;
 }
