--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,10 +1,11 @@
 .header {
+  position: fixed;
   width: 100%;
   height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 10px 10px;
   z-index: 100;
 }
 
@@ -140,12 +141,11 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    transition: transform 0.4s ease-in-out;
+    transition: transform 0.1s ease-in-out;
 }
 
 .header-menu li {
   width: auto;
-  margin-right: 30px;
 }
 
 .header-menu .header-link {
