formularios casi terminados
jeje

--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,12 @@ html {
     overflow: hidden;
 }
 
-.home-container {
+.principAll-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.main-content {
+.principMain-content {
     flex: 1;
 }
