cambios a los formularios
al parecer los ultimos (pura metira)

--- a/src/pages/styles/Login.css
+++ b/src/pages/styles/Login.css
@@ -77,3 +77,16 @@
 .login-forgot:hover {
   text-decoration: underline;
 }
+
+.password-toggle-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #666;
+  padding: 0 10px;
+}
+
+.password-toggle-btn:hover {
+  color: rgb(146, 0, 0);
+}
