--- a/src/components/styles/Prices.css
+++ b/src/components/styles/Prices.css
@@ -130,10 +130,15 @@
   }
 
   .price span:first-child,
-  .price span:last-child  {
-    text-shadow: none;
+  .price span:last-child {
     -webkit-text-stroke: 0;
     animation: none;
     text-shadow: none;
+  }
+
+  .prices-btn:hover {
+    background-color: rgb(146, 0, 0);
+    color: black;
+    border: 4px solid black;
   }
 }
