--- a/src/components/styles/Telegram.css
+++ b/src/components/styles/Telegram.css
@@ -32,7 +32,6 @@
   margin-top: 0;
 }
 
-
 .tooltip-container {
   cursor: pointer;
   position: relative;
@@ -54,15 +53,7 @@
   background: rgb(146, 0, 0);
   border: 1px solid rgba(34, 34, 34, 0.9);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -o-transition: all .2s ease-in-out;
-  -ms-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -o-transform: scale(0);
-  -ms-transform: scale(0);
   transform: scale(0);
   position: absolute;
   right: -55px;
@@ -83,10 +74,6 @@
 .tooltip-container:hover .tooltip,
 a:hover .tooltip {
   opacity: 1;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
   transform: scale(1);
 }
 
@@ -98,5 +85,13 @@ a:hover .tooltip {
     bottom: 30px;
     left: 15px;
     z-index: 98;
+  }
+  
+  .tooltip {
+    font-size: 13px;
+    padding: 4px 8px;
+    width: 90px;
+    right: -50px;
+    bottom: 65px;
   }
 }
