--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -7,6 +7,11 @@
   align-items: center;
   padding: 10px 10px;
   z-index: 100;
+  pointer-events: none;
+}
+
+.header * {
+  pointer-events: auto;
 }
 
 /* Logo */
@@ -88,8 +93,8 @@
 /* Efecto Scroll */
 
 .header-scrolled .header-title {
-  color: white;
-  -webkit-text-stroke: 0.01px black;
+  color: rgb(146, 0, 0);
+  -webkit-text-stroke: 0.0000001px black;
 }
 
 .header-scrolled .header-link {
@@ -130,11 +135,11 @@
 
 .loader {
   width: 50px;
-    height: 50px;
-    border: 5px solid white;
-    border-top: 5px solid transparent;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
+  height: 50px;
+  border: 5px solid white;
+  border-top: 5px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
@@ -142,17 +147,12 @@
   100% { transform: rotate(360deg); }
 }
 
-
 /* Responsive */
 @media (max-width: 858px) {
   .header-checkbtn {
-      display: block;
-      margin-right: 10px;
+    display: block;
+    margin-right: 10px;
   }
-
-  .header-title {
-    margin-left: 20px;
-}
 
   .header-menu {
     position: fixed;
@@ -169,49 +169,65 @@
     align-items: center;
     gap: 10px;
     transition: transform 0.1s ease-in-out;
-}
+  }
 
-.header-menu li {
-  width: auto;
-}
+  .header-menu li {
+    width: auto;
+  }
 
-.header-menu .header-link {
+  .header-menu .header-link {
     width: 100%;
     font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 15px;
-}
+    border: 1px solid rgb(146, 0, 0);
+    color: rgb(146, 0, 0);
+  }
 
-/* Activa la animación cuando se marca el checkbox */
-.header-check:checked ~ .header-menu {
+  .header-menu .header-active {
+    background-color: rgb(146, 0, 0);
+    color: black;
+  }
+
+  .header-check:checked ~ .header-menu {
     transform: translateX(0);
-}
+  }
 
-.header-check:checked ~ .header-menu .header-closebtn {
-  display: block;
-}
-
+  .header-check:checked ~ .header-menu .header-closebtn {
+    display: block;
+  }
 }
 
 @media (max-width: 480px) {
   .header-imgLogo {
-      height: 40px;
+    height: 40px;
   }
 
   .header-title {
-      font-size: 25px;
-      margin-left: 20px;
+    font-size: 25px;
   }
 }
 
 @media (max-width: 418px) {
   .header-imgLogo {
-      height: 26px;
+    height: 26px;
   }
 
   .header-title {
-      font-size: 18px;
+    font-size: 18px;
+  }
+}
+
+/* Eliminar efectos hover en móviles */
+@media (hover: none) {
+  .header-link:hover, 
+  .header-active:hover, 
+  .header-scrolled .header-link:hover, 
+  .header-scrolled .header-active:hover {
+    background-color: inherit;
+    color: inherit;
+    box-shadow: none;
   }
 }
