--- a/src/components/styles/EventoCard.css
+++ b/src/components/styles/EventoCard.css
@@ -36,6 +36,7 @@
     height: 6px;
     background: rgb(146, 0, 0);
     transform: translateY(-50%);
+    z-index: 2;
     clip-path: polygon(0% 50%, 5% 0%, 15% 40%, 25% 0%, 35% 50%, 45% 0%, 55% 50%, 65% 0%, 75% 50%, 85% 0%, 95% 50%, 100% 50%, 90% 100%, 80% 60%, 70% 100%, 60% 50%, 50% 100%, 40% 60%, 30% 100%, 20% 50%, 10% 100%);
 }
 
@@ -125,12 +126,44 @@
     .card-evento-label {
         font-size: 20px;
         -webkit-text-stroke: 0;
+        top: 1px;
+        right: 1px;
+        z-index: 2;
+    }
+
+    .card-evento-card {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .card-evento-card img {
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+        display: block;
+    }
+
+    .card-evento-card::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+            to bottom left,
+            rgba(255, 255, 255, 0.7) 0%,
+            rgba(255, 255, 255, 0) 50%
+        );
+        z-index: 1;
+        pointer-events: none;
     }
 
     .card-evento-card::before {
         border-width: 18px 18px 0 0;
     }
-    
+
     .card-evento-card::after {
         border-width: 0 0 18px 18px;
     }
