--- a/src/components/styles/Prices.css
+++ b/src/components/styles/Prices.css
@@ -86,6 +86,7 @@
 }
 
 .prices-btn {
+  font-family: face;
   display: inline-block;
   padding: 1em 3.5em;
   border: 4px solid black;
@@ -93,6 +94,7 @@
   color: black;
   text-decoration: none;
   text-align: center;
+  cursor: pointer;
 }
 
 .prices-btn:hover {
