--- a/src/components/styles/Title.css
+++ b/src/components/styles/Title.css
@@ -22,6 +22,7 @@
     height: 6px;
     background: rgb(146, 0, 0);
     transform: translateY(-50%);
+    z-index: -1;
     clip-path: polygon(0% 50%, 5% 0%, 15% 40%, 25% 0%, 35% 50%, 45% 0%, 55% 50%, 65% 0%, 75% 50%, 85% 0%, 95% 50%, 100% 50%, 90% 100%, 80% 60%, 70% 100%, 60% 50%, 50% 100%, 40% 60%, 30% 100%, 20% 50%, 10% 100%);
 }
 
