--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,10 +1,29 @@
 .footer {
   position: relative;
-  width: 100%;
-  background-color: rgba(146, 0, 0, 0.37);
-  color: white;
+  width: 95%;
+  margin: 20px auto 15px auto;
+  padding: 20px;
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgb(146, 0, 0);
+  box-sizing: border-box;
+}
+
+.footer-content {
   text-align: center;
   user-select: none;
-  padding: 20px 0;
-  margin-top: 25px;
+  width: 100%;
+}
+
+.footer p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.footer a {
+  color: rgb(146, 0, 0);
+  text-decoration: none;
+  font-weight: bold;
 }
