--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   width: 95%;
-  margin: 0 auto 15px auto;
+  margin: 20px auto 15px auto;
   padding: 20px;
   color: rgb(255, 255, 255);
   display: flex;
